# sentinel-env

./: .dockerignore  .gitignore  Dockerfile  README.md  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  server.py  test_api.py
graders/: task1_grader.py  task2_grader.py  task3_grader.py  task4_grader.py
scenarios/: task1.py  task2.py  task3.py  task4.py
server/: app.py
