[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-env"
version = "1.1.0"
description = "Minimal task environment with adversarial testing support"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai"
]

[project.optional-dependencies]
test = [
    "requests"
]

[tool.setuptools]
py-modules = ["env", "inference", "models", "server", "test_api"]
packages = ["graders", "scenarios"]

[tool.setuptools.package-data]
"*" = ["openenv.yaml", "README.md", "Dockerfile"]
