[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-env"
version = "1.1.0"
description = "Minimal task environment with adversarial testing support"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
test = [
    "requests"
]

[tool.setuptools]
py-modules = ["env", "inference", "models", "test_api"]
packages = ["graders", "scenarios", "server"]

[tool.setuptools.package-data]
"*" = ["openenv.yaml", "README.md", "Dockerfile"]
