[project]
name = "sentinel-env"
version = "1.0.0"
description = "AI safety evaluation environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["env", "inference", "models"]
packages = ["graders", "scenarios", "server"]

[tool.setuptools.package-data]
"*" = ["openenv.yaml", "README.md", "Dockerfile"]
